--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body{
     background-image: url('game-background.jpg');
+   background-repeat: no-repeat;
+   background-size: cover;
 }
 .quiz-container{
     margin-top: 300px;
