--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url('game-background.jpg');
+    background-image: url('./images/game-background.jpg');
    background-repeat: no-repeat;
    background-size: cover;
 }
