added a start button

--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+.body{
+    background-image: url('./images/NCS_Who-Wants-To-Be-A-Millionaire-Broadcast-Studio_01.jpg');
+}
 body{
     background-image: url('./images/game-background.jpg');
    background-repeat: no-repeat;
