--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body{
     background-color: blue ;
     text-align: center; 
     padding: 20px; 
+    font-size: 45px;
 }
 .money-image{
     height: 250px;
@@ -35,4 +36,13 @@ body{
     background-color: #b68a48 !important ;
     color: white;
     margin-top: 53vh;
+}
+
+
+@media screen and (max-width:1024px) {
+    #question{
+        width: 85%;
+        padding: 8px;
+        font-size: 25px;
+    }
 }
