--- a/style.css
+++ b/style.css
@@ -40,9 +40,13 @@ body{
 
 
 @media screen and (max-width:1024px) {
+    body{
+        background-image: url('');
+    }
     #question{
         width: 85%;
         padding: 8px;
         font-size: 25px;
+        margin-left: 20px;
     }
 }
