--- a/style.css
+++ b/style.css
@@ -41,7 +41,11 @@ body{
 
 @media screen and (max-width:1024px) {
     body{
-        background-image: url('');
+        background-image: url('welcome-background-mobile.jpg');
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        height: 100vh;
     }
     #question{
         width: 85%;
