--- a/style.css
+++ b/style.css
@@ -47,10 +47,10 @@ body{
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        height: 77vh;
+        height: 100vh;
     }
     #question{
-        width: 80%;
+        width: 100%;
         padding: 14px;
         font-size: 1.1em;
         margin-left: 0px;
@@ -59,11 +59,12 @@ body{
         margin-top: 110px;
     }
     .span{
-        width: 75%;
+        width: 80%;
         font-size: 15px !important;
+        margin-left: 20px;
     }
     .image-div{
-        padding-left: 10%;
+        padding-left: 25%;
      }
      #display{
         height: 50px;
