added walkAway function

--- a/style.css
+++ b/style.css
@@ -38,8 +38,8 @@ body{
     border: thick solid white;
 }
 .walk-away{
-    margin-left: 50%;
-    background-color: ;
+    margin-left: 57%;
+    background-color: rgb(95, 6, 6) !important;
 }
 .STARTED{
     background-color: #b68a48 !important ;
