--- a/style.css
+++ b/style.css
@@ -35,11 +35,12 @@ body{
     height: 50px;
     width: 15%;
     color: white;
-    border: thick solid white;
+    border: 1px solid white;
 }
 .walk-away{
     margin-left: 57%;
     background-color: rgb(95, 6, 6) !important;
+    border: 1px solid white;
 }
 .STARTED{
     background-color: #b68a48 !important ;
@@ -77,7 +78,11 @@ body{
         height: 50px;
         width: 35%;
         position: relative;
-        top: 180px;
+        top: 220px;
         /* padding-top: 50px; */
+    }
+    .walk-away{
+        position: relative;
+        top: 180px;
     }
 }
