--- a/style.css
+++ b/style.css
@@ -46,8 +46,13 @@ body{
     background-color: #b68a48 !important ;
     color: white;
     margin-top: 53vh;
+    animation: rotate 1s infinite;
 }
-
+@keyframes rotate {
+    0%{scale: 100%;}
+    50%{scale: 80%;}
+    100%{rotate: 100;}
+}
 
 @media screen and (max-width:1024px) {
     body{
