--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .body{
-    background-image: url('./images/NCS_Who-Wants-To-Be-A-Millionaire-Broadcast-Studio_01.jpg');
+    background-image: url('./images/NCS_Wh');
 }
 body{
     background-image: url('./images/game-background.jpg');
