--- a/style.css
+++ b/style.css
@@ -1,14 +1,25 @@
+/* index.html */
 .body{
     background-image: url('welcome-background-mobile.jpg');
 }
+.STARTED{
+    background-color: #b68a48 !important ;
+    color: white;
+    margin-top: 53vh;
+    animation: rotate 1s infinite;
+}
+@keyframes rotate {
+    0%{scale: 100%;}
+    50%{scale: 80%;}
+    100%{rotate: 100;}
+}
+
+/* game.html */
 body{
     background-image: url('./images/game-background.jpg');
    background-repeat: no-repeat;
    background-size: cover;
    overflow: hidden;
-}
-.game-over{
-    background-image: url('./images/game-over.jpg');
 }
 #btn{
     background-color: rgb(2, 0, 0) !important;
@@ -45,18 +56,17 @@ body{
     background-color: rgb(95, 6, 6) !important;
     border: 1px solid white;
 }
-.STARTED{
-    background-color: #b68a48 !important ;
-    color: white;
-    margin-top: 53vh;
-    animation: rotate 1s infinite;
+
+/* gameover.html */
+.game-over{
+    background-image: url('./images/welcome-background-img.jpg');
 }
-@keyframes rotate {
-    0%{scale: 100%;}
-    50%{scale: 80%;}
-    100%{rotate: 100;}
+.overlay{
+
 }
 
+
+/* Responsiveness */
 @media screen and (max-width:1024px) {
     body{
         background-image: url('./images/million.png');
