--- a/style.css
+++ b/style.css
@@ -61,15 +61,18 @@ body{
 .game-over{
     background-image: url('./images/welcome-background-img.jpg');
 }
-.overlay{
+#overLay{
 width: 68vh;
 height: 68vh;
 border-radius: 100%;
 background-color: #090863;
 margin-top: 160px;
+color: white;
 }
 .text{
     padding-top: 90px;
+    font-weight: bold;
+    font-size: 68px;
 }
 
 
