--- a/style.css
+++ b/style.css
@@ -75,6 +75,23 @@ color: white;
     font-size: 68px;
 }
 
+/* over.html */
+.overlay{
+   width: 68vh;
+  height: 68vh;
+  border-radius: 100%;
+  background-color: #090863;
+  margin-top: 160px;
+  color: white;
+}
+.text1{
+    padding-top: 186px;
+    font-weight: bold;
+    font-size: 68px;
+    animation: rotate 1s infinite;
+}
+
+
 
 /* Responsiveness */
 @media screen and (max-width:1024px) {
