--- a/style.css
+++ b/style.css
@@ -6,12 +6,6 @@
     background-color: #b68a48 !important ;
     color: white;
     margin-top: 53vh;
-    /* animation: rotate 1s infinite; */
-}
-@keyframes rotate {
-    0%{scale: 100%;}
-    50%{scale: 80%;}
-    100%{rotate: 100;}
 }
 
 /* game.html */
@@ -27,6 +21,9 @@ body{
 .span{
     width: 90%;
     font-size: 30px !important;
+}
+.mb{
+    margin-bottom: 20px;
 }
 #question{
     background-color: #090863 ;
@@ -90,7 +87,11 @@ body{
 .restart-img{
     animation: rotate 1s infinite;
 }
-
+@keyframes rotate {
+    0%{scale: 100%;}
+    50%{scale: 80%;}
+    100%{rotate: 100;}
+}
 
 
 /* Responsiveness */
@@ -141,13 +142,16 @@ body{
             font-size: 50px;
         }
     .overlay{
-        width: 55vh;
-       height: 55vh;
-       margin-top: 200px;
+        width: 48vh;
+       height: 48vh;
+       margin-top: 300px;
      }
      .text1{
-         padding-top: 160px;
+         padding-top: 120px;
          font-weight: bold;
          font-size: 50px;
      }
+     .mb{
+        margin-bottom: 5px;
+    }
 }
