--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body{
 .text{
     padding-top: 90px;
     font-weight: bold;
-    font-size: 68px;
+    font-size: 50px;
 }
 
 /* over.html */
@@ -97,7 +97,7 @@ body{
 /* Responsiveness */
 @media screen and (max-width:1024px) {
     body{
-        background-image: url('./images/million.png');
+        background-image: url('./images/game-background.jpg');
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -138,7 +138,7 @@ body{
         .text{
             padding-top: 90px;
             font-weight: bold;
-            font-size: 50px;
+            font-size: 40px;
         }
     .overlay{
         width: 48vh;
